add responsive font sizes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,4 +28,19 @@ import Layout from '../layouts/Layout.astro';
 		align-items: center;
 		height: 100%;
 	}
+	@media screen and (max-width: 1024px) {
+		h1 {
+			font-size: 6rem;
+		}
+	}
+	@media screen and (max-width: 768px) {
+		h1 {
+			font-size: 5rem;
+		}
+	}
+	@media screen and (max-width: 640px) {
+		h1 {
+			font-size: 4rem;
+		}
+	}
 </style>
