--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,7 @@ const { title } = Astro.props;
 <style is:global>
 	html {
 		font-family: 'Clash Display', sans-serif;
-		background-color: #F6F6F6;
+		background-color: #000;
+		overflow-y: hidden;
 	}
 </style>
