--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
 export interface Props {
 	title: string;
+	pageTitle: string;
 }
 
-const { title } = Astro.props;
+const { title, pageTitle } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -16,7 +17,7 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://api.fontshare.com">
 		<link rel="dns-prefetch" href="https://api.fontshare.com" />
 		<link href="https://api.fontshare.com/v2/css?f[]=clash-display@700&display=swap" rel="stylesheet">
-		<title>{title}</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
 		<slot />
