add description props

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,9 +2,10 @@
 export interface Props {
 	title: string;
 	pageTitle: string;
+	description: string;
 }
 
-const { title, pageTitle } = Astro.props;
+const { title, pageTitle, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -14,6 +15,9 @@ const { title, pageTitle } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="title" content={title}>
+		<meta property="og:title" content={title}/>
+		<meta name="twitter:title" content={title}>
 		<link rel="preconnect" href="https://api.fontshare.com">
 		<link rel="dns-prefetch" href="https://api.fontshare.com" />
 		<link href="https://api.fontshare.com/v2/css?f[]=clash-display@700&display=swap" rel="stylesheet">
