--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Ricafolio" pageTitle="ricafolio.me | web developer">
+<Layout title="Ricafolio" pageTitle="ricafolio.me | web developer" description="Hi! 👋 I'm Rica, a web designer & developer | Passionate about creating visually stunning and user-friendly websites">
 	<main>
 		<div class="flex-center">
 			<h1>Ricafolio</h1>
