--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,8 @@ export interface Props {
 }
 
 const { title, pageTitle, description } = Astro.props;
+const url = "https://ricafolio.me"
+const fontshareUrl = "https://api.fontshare.com"
 ---
 
 <!DOCTYPE html>
@@ -16,10 +18,17 @@ const { title, pageTitle, description } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="title" content={title}>
+		<meta name="description" content={description}>
+		<meta property="og:type" content="website">
 		<meta property="og:title" content={title}/>
+		<meta name="og:description" content={description}>
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content={url}>
+  	<meta name="twitter:url" content={url}>
 		<meta name="twitter:title" content={title}>
-		<link rel="preconnect" href="https://api.fontshare.com">
-		<link rel="dns-prefetch" href="https://api.fontshare.com" />
+		<meta name="twitter:description" content={description}>
+		<link rel="preconnect" href={fontshareUrl} />
+		<link rel="dns-prefetch" href={fontshareUrl} />
 		<link href="https://api.fontshare.com/v2/css?f[]=clash-display@700&display=swap" rel="stylesheet">
 		<title>{pageTitle}</title>
 	</head>
