--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,7 @@ const fontshareUrl = "https://api.fontshare.com"
 		<meta property="og:type" content="website">
 		<meta property="og:title" content={title}/>
 		<meta name="og:description" content={description}>
+		<meta property="og:image" content="/og_img.png">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:site" content={url}>
   	<meta name="twitter:url" content={url}>
