add custom selection color

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,9 @@ const fontshareUrl = "https://api.fontshare.com"
 	</body>
 </html>
 <style is:global>
+	::selection {
+		background-color: #fffeed26;
+	}
 	html {
 		font-family: 'Clash Display', sans-serif;
 		background-color: #000;
