--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -1,14 +1,34 @@
-<div>
-  <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="inline-block" rel="noopener noreferrer" style="margin-right: 6px;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16"><path fill="#f0d8e1" d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248c-.015-.709-.52-1.248-1.342-1.248c-.822 0-1.359.54-1.359 1.248c0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586c.173-.431.568-.878 1.232-.878c.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252c-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/></svg>
+<div class="link-bar">
+  <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button" rel="noopener noreferrer">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="#0e76a8" d="M8.268 28H2.463V9.306h5.805zM5.362 6.756C3.506 6.756 2 5.218 2 3.362a3.362 3.362 0 0 1 6.724 0c0 1.856-1.506 3.394-3.362 3.394zM29.994 28h-5.792v-9.1c0-2.169-.044-4.95-3.018-4.95c-3.018 0-3.481 2.356-3.481 4.794V28h-5.799V9.306h5.567v2.55h.081c.775-1.469 2.668-3.019 5.492-3.019c5.875 0 6.955 3.869 6.955 8.894V28z"/></svg>
   </a>
-  <a href="https://github.com/ricafolio" target="_blank" class="inline-block" rel="noopener noreferrer">
-    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="#f0d8e1" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/></svg>
+  <a href="https://github.com/ricafolio" target="_blank" class="link-button" rel="noopener noreferrer">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="#171717" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/></svg>
+  </a>
+  <a href="https://codepen.io/ricafolio/" target="_blank" class="link-button" rel="noopener noreferrer">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256"><path fill="#000" d="m237.9 90.6l-100-56.8a20 20 0 0 0-19.8 0l-100 56.8A11.9 11.9 0 0 0 12 101v64a11.9 11.9 0 0 0 6.1 10.4l100 56.8a20.1 20.1 0 0 0 19.8 0l100-56.8A11.9 11.9 0 0 0 244 165v-64a11.9 11.9 0 0 0-6.1-10.4ZM220 144.4L199.9 133l20.1-11.4Zm-44.4-25.2L140 99V62.6l67.7 38.4Zm-47.6 27L104.7 133l23.3-13.2l23.3 13.2Zm-12-83.6V99l-35.6 20.2L48.3 101Zm-80 59L56.1 133L36 144.4Zm44.4 25.2L116 167v36.4L48.3 165Zm59.6 56.6V167l35.6-20.2l32.1 18.2Z"/></svg>
   </a>
 </div>
 
 <style>
-	.inline-block {
-		display: inline-block;
-	}
+  .link-bar {
+    width: 100%;
+    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid #ff8db02e;
+    box-shadow: 0px 1px 9px #737373;
+    background: radial-gradient(104.58% 104.45% at 18.91% 52.2%,rgb(255 199 0 / 30%) 0%,rgba(255,199,0,0) 100%),radial-gradient(96.22% 70.96% at 70.08% 82.42%,rgb(130 4 255 / 39%) 0%,rgba(0,0,0,0) 100%),radial-gradient(110.73% 50% at 50% 0%,#fd8aff4f 0%,rgba(255,255,255,0) 100%),#ffd1ec87;
+    display: flex;
+    justify-content: center;
+  }
+  .link-button {
+		display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 3.2em;
+    height: 3.2em;
+    margin-right: 12px;
+    background-color: #fff;
+    border-radius: 12px;
+  }
 </style>
