fix tooltip style

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,4 +49,9 @@ const fontshareUrl = "https://api.fontshare.com"
 		background-color: #000;
 		overflow-y: hidden;
 	}
+  .tippy-box[data-theme='default'] {
+    background-color: rgb(122, 122, 122) !important;
+    color: #000 !important;
+    font-family: sans-serif !important;
+  }
 </style>
