--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -12,10 +12,12 @@
 
 <style>
   .link-bar {
-    width: 100%;
+    position: fixed;
+    bottom: 4px;
+    width: 70%;
     padding: 10px;
     border-radius: 20px;
-    border: 1px solid #ff8db02e;
+    border: 1px solid #5028342e;
     box-shadow: 0px 1px 9px #737373;
     background: radial-gradient(104.58% 104.45% at 18.91% 52.2%,rgb(255 199 0 / 30%) 0%,rgba(255,199,0,0) 100%),radial-gradient(96.22% 70.96% at 70.08% 82.42%,rgb(130 4 255 / 39%) 0%,rgba(0,0,0,0) 100%),radial-gradient(110.73% 50% at 50% 0%,#fd8aff4f 0%,rgba(255,255,255,0) 100%),#ffd1ec87;
     display: flex;
@@ -25,10 +27,21 @@
 		display: flex;
     justify-content: center;
     align-items: center;
-    width: 3.2em;
-    height: 3.2em;
+    width: 3.5em;
+    height: 3.5em;
     margin-right: 12px;
     background-color: #fff;
+    box-shadow: 0px 1px 9px #785555;
     border-radius: 12px;
   }
+  @media screen and (max-width: 768px) {
+		.link-bar {
+			width: 95%;
+		}
+	}
+  @media screen and (max-width: 640px) {
+		.link-bar {
+			width: 93%;
+		}
+	}
 </style>
