fix tippy color

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,8 +50,11 @@ const fontshareUrl = "https://api.fontshare.com"
 		overflow-y: hidden;
 	}
   .tippy-box[data-theme='default'] {
-    background-color: rgb(122, 122, 122) !important;
+    background-color: rgb(177, 177, 177) !important;
     color: #000 !important;
     font-family: sans-serif !important;
   }
+	.tippy-arrow {
+    color: rgb(177, 177, 177) !important;
+	}
 </style>
