--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import LinkBar from '../components/LinkBar.astro';
 	<main>
 		<div class="flex-center">
 			<h1>Ricafolio</h1>
+			<h2>Front-end Developer</h2>
 			<LinkBar />
 		</div>
 	</main>
@@ -14,6 +15,7 @@ import LinkBar from '../components/LinkBar.astro';
 
 <style>
 	main {
+		color: white;
 		margin: auto;
 		height: 80vh;
 		padding: 1.5rem;
@@ -26,6 +28,11 @@ import LinkBar from '../components/LinkBar.astro';
 		background: radial-gradient(104.58% 104.45% at 18.91% 52.2%, rgba(255, 199, 0, 0.2) 0%, rgba(255, 199, 0, 0) 100%), radial-gradient(96.22% 70.96% at 70.08% 82.42%, rgba(130, 4, 255, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(110.73% 50% at 50% 0%, #FD8AFF 0%, rgba(255, 255, 255, 0) 100%), #FFFBF4;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
+	}
+	h2 {
+		font-family: 'Satoshi', sans-serif;
+		font-weight: 400;
+		color: rgb(169, 163, 168);
 	}
 	.flex-center {
 		display: flex;
