don't use props for meta content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import LinkBar from '../components/LinkBar.astro';
 ---
 
-<Layout title="Ricafolio" pageTitle="ricafolio.me | web developer" description="Hi! 👋 I'm Rica, a web designer & developer | Passionate about creating visually stunning and user-friendly websites">
-	<main>
-		<div class="flex-center">
+<Layout>
 			<h1>
 				Hello, I'm <span id="gradient-text">Rica</span>, a web developer based in Philippines.
 			</h1>
