--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,9 @@
 ---
 import { Tooltips } from 'astro-tooltips';
 
-export interface Props {
-	title: string;
-	pageTitle: string;
-	description: string;
-}
-
-const { title, pageTitle, description } = Astro.props;
+const title = "Ricafolio"
+const pageTitle = "ricafolio.me | web developer"
+const description = "Hi! 👋 I'm Rica, a web designer & developer, passionate about creating visually stunning and user-friendly websites"
 const url = "https://ricafolio.me"
 const fontshareUrl = "https://api.fontshare.com"
 ---
