fix linkbar css

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -1,8 +1,8 @@
 <div class="link-bar">
-  <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button" rel="noopener noreferrer" title="LinkedIn">
+  <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="LinkedIn">
     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="#0e76a8" d="M8.268 28H2.463V9.306h5.805zM5.362 6.756C3.506 6.756 2 5.218 2 3.362a3.362 3.362 0 0 1 6.724 0c0 1.856-1.506 3.394-3.362 3.394zM29.994 28h-5.792v-9.1c0-2.169-.044-4.95-3.018-4.95c-3.018 0-3.481 2.356-3.481 4.794V28h-5.799V9.306h5.567v2.55h.081c.775-1.469 2.668-3.019 5.492-3.019c5.875 0 6.955 3.869 6.955 8.894V28z"/></svg>
   </a>
-  <a href="https://github.com/ricafolio" target="_blank" class="link-button" rel="noopener noreferrer" title="Github">
+  <a href="https://github.com/ricafolio" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Github">
     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="#171717" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5c.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34c-.46-1.16-1.11-1.47-1.11-1.47c-.91-.62.07-.6.07-.6c1 .07 1.53 1.03 1.53 1.03c.87 1.52 2.34 1.07 2.91.83c.09-.65.35-1.09.63-1.34c-2.22-.25-4.55-1.11-4.55-4.92c0-1.11.38-2 1.03-2.71c-.1-.25-.45-1.29.1-2.64c0 0 .84-.27 2.75 1.02c.79-.22 1.65-.33 2.5-.33c.85 0 1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02c.55 1.35.2 2.39.1 2.64c.65.71 1.03 1.6 1.03 2.71c0 3.82-2.34 4.66-4.57 4.91c.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/></svg>
   </a>
   <a href="https://codepen.io/ricafolio/" target="_blank" class="link-button" rel="noopener noreferrer" title="Codepen">
@@ -12,12 +12,11 @@
 
 <style>
   .link-bar {
-    position: fixed;
-    bottom: 4px;
-    width: 70%;
-    padding: 10px;
     display: flex;
     justify-content: center;
+    position: fixed;
+    bottom: 4px;
+    padding: 10px;
   }
   .link-button {
 		display: flex;
@@ -25,19 +24,8 @@
     align-items: center;
     width: 3.5em;
     height: 3.5em;
-    margin-right: 12px;
     background-color: #fff;
     box-shadow: 0px 1px 9px #78555585, inset 0px 0px 7px #80808054;
     border-radius: 12px;
   }
-  @media screen and (max-width: 768px) {
-		.link-bar {
-			width: 95%;
-		}
-	}
-  @media screen and (max-width: 640px) {
-		.link-bar {
-			width: 93%;
-		}
-	}
 </style>
