--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LinkBar from '../components/LinkBar.astro';
+import NavBar from '../components/NavBar.astro';
 ---
 
 <Layout>
 	<main class="text-white">
 		<!-- NAV -->
-		<div class="flex justify-center font-satoshi text-sm sm:text-base">
-			<div class="flex bg-zinc-800 rounded-b-lg">
-				<a href="#" class="px-8 py-5 text-zinc-300 hover:text-white ease-linear duration-150">About</a>
-				<a href="#coming_soon" class="px-8 py-5 text-zinc-300 hover:text-white ease-linear duration-150">Projects</a>
-			</div>
-		</div>
+		<NavBar />
 
 		<!-- BODY -->
 		<div class="container mx-auto flex flex-col justify-evenly h-80">
@@ -33,11 +29,6 @@ import LinkBar from '../components/LinkBar.astro';
 		background: radial-gradient(104.58% 104.45% at 18.91% 52.2%, rgba(255, 199, 0, 0.2) 0%, rgba(255, 199, 0, 0) 100%), radial-gradient(96.22% 70.96% at 70.08% 82.42%, rgba(130, 4, 255, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(110.73% 50% at 50% 0%, #FD8AFF 0%, rgba(255, 255, 255, 0) 100%), #FFFBF4;
 		-webkit-background-clip: text;
 		-webkit-text-fill-color: transparent;
-	}
-	.font-satoshi {
-		font-family: 'Satoshi', sans-serif;
-		font-weight: 500;
-		color: #eeeeee;
 	}
 	.h-80 {
 		height: 80vh;
