pass props to Navbar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import NavBar from '../components/NavBar.astro';
 
 <Layout>
 	<main class="text-white">
-		<NavBar />
+		<NavBar page="about" />
 
 		<!-- BODY -->
 		<div class="container mx-auto flex flex-col justify-evenly h-80">
