--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,6 +5,6 @@ import NavBar from '../components/NavBar.astro';
 
 <Layout>
 	<main class="text-white">
-    <NavBar />
+    <NavBar page="projects" />
   </main>
 </Layout>
