--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,7 +61,7 @@ const fontshareUrl = "https://api.fontshare.com"
 		background-color: #ffffff45;
 	}
 	html {
-		font-family: 'Clash Display', sans-serif;
+		font-family: 'Satoshi', sans-serif;
 		background-color: #000;
 		overflow-y: hidden;
 	}
