move gradient class to global styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,4 +73,10 @@ const fontshareUrl = "https://api.fontshare.com"
 	.tippy-arrow {
     color: rgb(177, 177, 177) !important;
 	}
+	#gradient-text {
+		margin: 0;
+		background: radial-gradient(104.58% 104.45% at 18.91% 52.2%, rgba(255, 199, 0, 0.2) 0%, rgba(255, 199, 0, 0) 100%), radial-gradient(96.22% 70.96% at 70.08% 82.42%, rgba(130, 4, 255, 0.2) 0%, rgba(0, 0, 0, 0) 100%), radial-gradient(110.73% 50% at 50% 0%, #FD8AFF 0%, rgba(255, 255, 255, 0) 100%), #FFFBF4;
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+	}
 </style>
