add conditional noindex tag

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import LinkBar from '../components/LinkBar.astro';
 import NavBar from '../components/NavBar.astro';
 ---
 
-<Layout>
+<Layout doIndex={true}>
 	<main class="text-white">
 		<NavBar page="about" />
 
