--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import NavBar from '../components/NavBar.astro';
 ---
 
-<Layout>
+<Layout doIndex={false}>
 	<main class="text-white">
     <NavBar page="projects" />
     
