--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { Tooltips } from 'astro-tooltips';
 
+const { doIndex } = Astro.props;
 const title = "Ricafolio"
 const pageTitle = "ricafolio.me | web developer"
 const description = "Hi! 👋 I'm Rica, a web designer & developer from Philippines. Passionate about creating visually stunning and user-friendly websites."
@@ -12,6 +13,7 @@ const fontshareUrl = "https://api.fontshare.com"
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		{doIndex && <meta name="robots" content="noindex">}
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
