fix project spacings

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -21,10 +21,9 @@ import NavBar from '../components/NavBar.astro';
               <h2 class="text-3xl font-clash">WenMint</h2>
               <p class="text-xl text-zinc-300">NFT Drops Calendar</p>
             </div>
-            <div class="my-3">
-              <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Nuxt 2</span>
+            <div class="mt-1 mb-3">
+              <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Nuxt.js</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Strapi</span>
-              <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Node.js</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Tailwind CSS</span>
             </div>
             <div>
@@ -47,7 +46,7 @@ import NavBar from '../components/NavBar.astro';
               <h2 class="text-3xl font-clash">Premint Links Discord Bot</h2>
               <p class="text-xl text-zinc-300">Bot that scrapes latest premint links shared across Twitter</p>
             </div>
-            <div class="my-3">
+            <div class="mt-1 mb-3">
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Discord.js</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Node.js</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Twitter API</span>
@@ -72,7 +71,7 @@ import NavBar from '../components/NavBar.astro';
               <h2 class="text-3xl font-clash">NFT Referral</h2>
               <p class="text-xl text-zinc-300">Referral campaign for NFT project</p>
             </div>
-            <div class="my-3">
+            <div class="mt-1 mb-3">
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Nuxt.js</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Strapi</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">Twitter OAuth</span>
@@ -97,7 +96,7 @@ import NavBar from '../components/NavBar.astro';
               <h2 class="text-3xl font-clash">Chef</h2>
               <p class="text-xl text-zinc-300">Responsive landing page</p>
             </div>
-            <div class="my-3">
+            <div class="mt-1 mb-3">
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">HTML</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">CSS</span>
               <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1">jQuery</span>
