use semantic elements

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -1,4 +1,4 @@
-<div class="flex justify-center align-center">
+<footer class="flex justify-center align-center">
   <div class="link-bar">
     <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="LinkedIn">
       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path fill="#0e76a8" d="M8.268 28H2.463V9.306h5.805zM5.362 6.756C3.506 6.756 2 5.218 2 3.362a3.362 3.362 0 0 1 6.724 0c0 1.856-1.506 3.394-3.362 3.394zM29.994 28h-5.792v-9.1c0-2.169-.044-4.95-3.018-4.95c-3.018 0-3.481 2.356-3.481 4.794V28h-5.799V9.306h5.567v2.55h.081c.775-1.469 2.668-3.019 5.492-3.019c5.875 0 6.955 3.869 6.955 8.894V28z"/></svg>
@@ -10,7 +10,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256"><path fill="#000" d="m237.9 90.6l-100-56.8a20 20 0 0 0-19.8 0l-100 56.8A11.9 11.9 0 0 0 12 101v64a11.9 11.9 0 0 0 6.1 10.4l100 56.8a20.1 20.1 0 0 0 19.8 0l100-56.8A11.9 11.9 0 0 0 244 165v-64a11.9 11.9 0 0 0-6.1-10.4ZM220 144.4L199.9 133l20.1-11.4Zm-44.4-25.2L140 99V62.6l67.7 38.4Zm-47.6 27L104.7 133l23.3-13.2l23.3 13.2Zm-12-83.6V99l-35.6 20.2L48.3 101Zm-80 59L56.1 133L36 144.4Zm44.4 25.2L116 167v36.4L48.3 165Zm59.6 56.6V167l35.6-20.2l32.1 18.2Z"/></svg>
     </a>
   </div>
-</div>
+</footer>
 
 <style>
   .link-bar {
