--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,16 +5,16 @@ import NavBar from '../components/NavBar.astro';
 ---
 
 <Layout doIndex={true}>
-	<main class="text-white">
+	<div class="text-white">
 		<NavBar page="about" />
 
 		<!-- BODY -->
-		<div class="container mx-auto flex flex-col justify-evenly h-80">
+		<main class="container mx-auto flex flex-col justify-evenly h-80">
 			<div class="w-5/6 sm:w-3/6 mx-auto flex justify-center align-center">
 				<h1 class="text-5xl lg:text-6xl font-clash">Hello, I'm <span class="gradient-text">Rica</span>, a web developer based in Philippines.</h1>
 			</div>
-		</div>
+		</main>
 
 		<LinkBar />
-	</main>
+	</div>
 </Layout>
