--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,14 @@ const fontshareUrl = "https://api.fontshare.com"
 	<body >
 		<slot />
 		<div id="tsparticles"></div>
+		<script type="text/plain">
+	┏━━━┓╋╋╋╋╋╋╋┏━┓╋╋┏┓
+	┃┏━┓┃╋╋╋╋╋╋╋┃┏┛╋╋┃┃ ^__^
+	┃┗━┛┣┳━━┳━━┳┛┗┳━━┫┃┏┳━━┓
+	┃┏┓┏╋┫┏━┫┏┓┣┓┏┫┏┓┃┃┣┫┏┓┃
+	┃┃┃┗┫┃┗━┫┏┓┃┃┃┃┗┛┃┗┫┃┗┛┃
+	┗┛┗━┻┻━━┻┛┗┛┗┛┗━━┻━┻┻━━┛
+		</script>
 	</body>
 </html>
 
