--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -1,22 +1,22 @@
 ---
-import LinkedIn from './icons/LinkedIn.astro';
-import Github from './icons/Github.astro';
-import VSCO from './icons/VSCO.astro';
-import Dribbble from './icons/Dribbble.astro';
+import LinkedInIcon from './icons/LinkedIn.astro';
+import GithubIcon from './icons/Github.astro';
+import VSCOIcon from './icons/VSCO.astro';
+import DribbbleIcon from './icons/Dribbble.astro';
 ---
 <div class="flex justify-center align-center">
   <div class="link-bar">
     <a href="https://www.linkedin.com/in/ricafolio/" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="LinkedIn">
-      <LinkedIn />
+      <LinkedInIcon />
     </a>
     <a href="https://github.com/ricafolio" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Github">
-      <Github />
+      <GithubIcon />
     </a>
     <a href="https://vsco.co/zz-rica/gallery" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Photography">
-      <VSCO />
+      <VSCOIcon />
     </a>
     <a href="https://dribbble.com/notrica" target="_blank" class="link-button" rel="noopener noreferrer" title="Dribbble">
-      <Dribbble />
+      <DribbbleIcon />
     </a>
   </div>
 </div>
