--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -14,7 +14,7 @@ const { img_file_name, progress, title, description, tools, url, url_text } = As
 
   <div class="w-full md:w-3/6 px-0 md:px-6 flex flex-col justify-center">
     <div>
-      {progress && <small class="block text-sm mb-1 font-semibold uppercase text-pink-500">{progress}</small>}
+      {progress && <small class={`block text-sm mb-1 font-semibold uppercase ${progress.color}`}>{progress.text}</small>}
       <h2 class="text-3xl font-clash">{title}</h2>
       <p class="text-xl text-zinc-300">{description}</p>
     </div>
