--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -3,35 +3,37 @@ import ExternalIcon from "./icons/External.astro";
 
 const { img_file_name, progress, title, description, tools, url, url_text } = Astro.props;
 ---
-<section class="flex flex-col md:flex-row w-full my-12">
-  <div class="w-full md:w-3/6 mb-6 md:mb-0">
-    <picture>
-      <source type="image/webp" srcset={`/img/${img_file_name}.webp`}>
-      <source type="image/png" srcset={`/img/${img_file_name}.png`}>
-      <img src={`/img/${img_file_name}.png`} alt={title} loading="lazy">
-    </picture>
-  </div>
-
-  <div class="w-full md:w-3/6 px-0 md:px-6 flex flex-col justify-center">
-    <div>
-      {progress && <small class={`block text-sm mb-1 font-semibold uppercase ${progress.color}`}>{progress.text}</small>}
-      <h2 class="text-3xl font-clash">{title}</h2>
-      <p class="text-xl text-zinc-300">{description}</p>
+<section class="w-full md:w-6/12 mb-12 md:mb-6">
+  <div class="bg-zinc-900 p-5 md:mr-4 rounded-md">
+    <div class="mb-5">
+      <picture>
+        <source type="image/webp" srcset={`/img/${img_file_name}.webp`}>
+        <source type="image/png" srcset={`/img/${img_file_name}.png`}>
+        <img src={`/img/${img_file_name}.png`} alt={title} loading="lazy">
+      </picture>
     </div>
 
-    <div class="mt-1 mb-3">
-      {tools.map((tool: String) => {
-        return <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1 mr-1">{tool}</span>
-      })}
-    </div>
+    <div class="flex flex-col justify-center">
+      <div>
+        {progress && <small class={`block text-sm mb-1 font-semibold uppercase ${progress.color}`}>{progress.text}</small>}
+        <h2 class="text-3xl font-clash">{title}</h2>
+        <p class="text-xl text-zinc-300">{description}</p>
+      </div>
 
-    <div>
-      <a href={url} target="_blank" rel="nofollow" class="inline-block border border-zinc-800 hover:border-zinc-400 ease-in duration-150 rounded py-3 px-5">
-        <span class="flex items-center justify-center">
-          <span>{url_text}</span>
-          <ExternalIcon />
-        </span>
-      </a>
+      <div class="mt-1 mb-3">
+        {tools.map((tool: String) => {
+          return <span class="inline-block bg-zinc-800 rounded py-3 px-5 mt-1 mr-1">{tool}</span>
+        })}
+      </div>
+
+      <div>
+        <a href={url} target="_blank" rel="nofollow" class="inline-block border border-zinc-800 hover:border-zinc-400 ease-in duration-150 rounded py-3 px-5">
+          <span class="flex items-center justify-center">
+            <span>{url_text}</span>
+            <ExternalIcon />
+          </span>
+        </a>
+      </div>
     </div>
   </div>
 </section>
