chore: add twitch link + component

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -3,6 +3,7 @@ import LinkedInIcon from './icons/LinkedIn.astro';
 import GithubIcon from './icons/Github.astro';
 import VSCOIcon from './icons/VSCO.astro';
 import DribbbleIcon from './icons/Dribbble.astro';
+import TwitchIcon from './icons/Twitch.astro';
 ---
 <div class="flex justify-center align-center">
   <div class="link-bar">
@@ -15,8 +16,11 @@ import DribbbleIcon from './icons/Dribbble.astro';
     <a href="https://vsco.co/zz-rica/gallery" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Photography">
       <VSCOIcon />
     </a>
-    <a href="https://dribbble.com/notrica" target="_blank" class="link-button" rel="noopener noreferrer" title="Dribbble">
+    <a href="https://dribbble.com/notrica" target="_blank" class="link-button mr-2" rel="noopener noreferrer" title="Dribbble">
       <DribbbleIcon />
+    </a>
+    <a href="https://www.twitch.tv/thejyuviole/videos?category=1469308723&filter=archives&sort=time" target="_blank" class="link-button" rel="noopener noreferrer" title="Watch my software development streams ;)">
+      <TwitchIcon />
     </a>
   </div>
 </div>
